--- a/purchase_muti_vendor/views/purchase_order_view.xml
+++ b/purchase_muti_vendor/views/purchase_order_view.xml
@@ -5,7 +5,12 @@
         <field name="inherit_id" ref="purchase.purchase_order_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='partner_id']" position="after">
-                <field name="vendor_ids" widget="many2many_tags"/>
+                <field name="rfq_vendor_ids" nolabel="1">
+                    <list editable="bottom">
+                        <field name="vendor_id"/>
+                        <field name="bid_amount"/>
+                    </list>
+                </field>
             </xpath>
         </field>
     </record>
