--- a/purchase_request/views/purchase_request_views.xml
+++ b/purchase_request/views/purchase_request_views.xml
@@ -1,54 +1,59 @@
 <odoo>
-
+    <!-- Purchase Request Form View -->
     <record id="view_purchase_request_form" model="ir.ui.view">
         <field name="name">purchase.request.form</field>
         <field name="model">purchase.request</field>
         <field name="arch" type="xml">
             <form string="Purchase Request">
+                <header>
+                    <button name="action_create_rfq"
+                            type="object"
+                            string="Create RFQ"
+                            class="btn-primary"
+                            modifiers="{'invisible': [('state','!=','draft')]}"/>
+                    <field name="state" widget="statusbar" statusbar_visible="draft,submitted,rfq_generated"/>
+                </header>
                 <sheet>
                     <group>
                         <field name="name"/>
                         <field name="employee_id"/>
                         <field name="product_id"/>
                         <field name="quantity"/>
-                        <field name="state" readonly="1"/>
                     </group>
-                    <footer>
-                        <button name="action_create_rfq"
-                                type="object"
-                                string="Create RFQ"
-                                class="btn-primary"/>
-                    </footer>
                 </sheet>
             </form>
         </field>
     </record>
 
+```
+<!-- Purchase Request List View -->
+<record id="view_purchase_request_list" model="ir.ui.view">
+    <field name="name">purchase.request.list</field>
+    <field name="model">purchase.request</field>
+    <field name="arch" type="xml">
+        <list string="Purchase Requests">
+            <field name="name"/>
+            <field name="employee_id"/>
+            <field name="product_id"/>
+            <field name="quantity"/>
+            <field name="state"/>
+        </list>
+    </field>
+</record>
 
-    <record id="view_purchase_request_list" model="ir.ui.view">
-        <field name="name">purchase.request.list</field>
-        <field name="model">purchase.request</field>
-        <field name="arch" type="xml">
-            <list string="Purchase Requests">
-                <field name="name"/>
-                <field name="employee_id"/>
-                <field name="product_id"/>
-                <field name="quantity"/>
-                <field name="state"/>
-            </list>
-        </field>
-    </record>
+<!-- Purchase Request Action -->
+<record id="action_purchase_request" model="ir.actions.act_window">
+    <field name="name">Purchase Requests</field>
+    <field name="res_model">purchase.request</field>
+    <field name="view_mode">list,form</field>
+</record>
 
-    <record id="action_purchase_request" model="ir.actions.act_window">
-        <field name="name">Purchase Requests</field>
-        <field name="res_model">purchase.request</field>
-        <field name="view_mode">list,form</field>
-    </record>
+<!-- Menu Items -->
+<menuitem id="menu_purchase_request_root" name="Purchase Requests"/>
+<menuitem id="menu_purchase_request_requests"
+          name="Requests"
+          parent="menu_purchase_request_root"
+          action="action_purchase_request"/>
+```
 
-   
-    <menuitem id="menu_purchase_request_root" name="Purchase Requests"/>
-    <menuitem id="menu_purchase_request_requests" 
-              name="Requests" 
-              parent="menu_purchase_request_root" 
-              action="action_purchase_request"/>
 </odoo>
