--- a/purchase_multi_vendor/views/purchase_order_view_v2.xml
+++ b/purchase_multi_vendor/views/purchase_order_view_v2.xml
@@ -6,6 +6,11 @@
         <field name="arch" type="xml">
 
            
+             <!-- Hide existing vendor field -->
+            <xpath expr="//field[@name='partner_id']" position="attributes">
+                <attribute name="invisible">1</attribute>
+            </xpath>
+
             <xpath expr="//field[@name='partner_id']" position="after">
                 <field name="rfq_vendor_ids" widget="many2many_tags"
                        placeholder="Select vendors"
